--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -4,6 +4,11 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Complaints</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only class="navBtnRight" (click)="open()">
+        <ion-icon name="ios-add-circle-outline"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
