--- a/src/pages/complaint/newComplaintModal.html
+++ b/src/pages/complaint/newComplaintModal.html
@@ -22,7 +22,7 @@
         </ion-select> 
       </ion-item>
       <ion-item>
-        <ion-label>Complaint Category</ion-label>
+        <ion-label>Complaint Against</ion-label>
         <ion-select [(ngModel)]="category" formControlName="category" (ngModelChange)="setCategory(category)">
           <ion-option *ngFor="let category of categories" [value]="category">{{category.name}}</ion-option>
         </ion-select> 
@@ -31,6 +31,14 @@
         <ion-label>Select Teacher</ion-label>
         <ion-select [(ngModel)]="againstEmployeeId" formControlName="againstEmployeeId" (ngModelChange)="setTeacher($event)">
           <ion-option *ngFor="let teacher of teachers" [value]="teacher.teacherId">{{teacher.teacherName}}</ion-option>
+        </ion-select> 
+      </ion-item>
+      <ion-item *ngIf="childCategories">
+        <ion-label>Select SubCategory</ion-label>
+        <ion-select [(ngModel)]="childCategory" formControlName="childCategory">
+          <ion-option *ngFor="let childCategory of childCategories" [value]="childCategory.id">
+            {{childCategory.name}}
+          </ion-option>
         </ion-select> 
       </ion-item>
       <ion-item>
