Textarea field update

--- a/src/pages/complaint/newComplaintModal.html
+++ b/src/pages/complaint/newComplaintModal.html
@@ -42,10 +42,10 @@
         </ion-select> 
       </ion-item>
       <ion-item>
-        <ion-input type="text" formControlName="title" placeholder="Title"></ion-input>
+        <ion-input type="text" formControlName="title" placeholder="Complaint Title"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-textarea formControlName="description" placeholder="Description"></ion-textarea>
+        <ion-textarea rows="8" formControlName="description" placeholder="Complaint Description"></ion-textarea>
       </ion-item>
     </ion-list>
     <ion-list padding>
