--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -12,6 +12,12 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Yugma Complaints</h3>
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let complaint of complaints">
+      <h3><b>{{complaint.title}}</b></h3>
+      <p>{{complaint.description}}</p>
+      <button ion-button clear item-right>View</button>
+    </ion-item>
+  </ion-list>
 </ion-content>
