--- a/src/pages/complaint/viewComplaintModal.html
+++ b/src/pages/complaint/viewComplaintModal.html
@@ -13,7 +13,9 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-item>
-    <h2>View Complaint</h2>
-  </ion-item>
+    <h2>Complaint Title: {{complaint.title}}</h2>
+    <h3>Complaint Description: {{complaint.description}}</h3>
+    <p>Complaint Status: {{complaint.statusName}}</p>
+    <p>Complaint Create: {{complaint.createdAt}}</p>
+    <p>Complaint Against: {{complaint.againstCategoryName}}</p>
 </ion-content>
