--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -4,20 +4,26 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Complaints</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only class="navBtnRight" (click)="open()">
-        <ion-icon name="ios-add-circle-outline"></ion-icon>
-      </button>
-    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let complaint of complaints">
-      <h3><b>{{complaint.title}}</b></h3>
-      <p>{{complaint.description}}</p>
-      <button ion-button clear item-right (click)="viewComplaint(complaint)">View</button>
-    </ion-item>
+    <ion-item-sliding *ngFor="let complaint of complaints">
+      <ion-item>
+        <h3><b>{{complaint.title}}</b></h3>
+        <p>{{complaint.description}}</p>
+        <button ion-button clear item-right (click)="viewComplaint(complaint)">View</button>
+      </ion-item>
+      <ion-item-options side="right">
+        <button ion-button color="primary">
+          <ion-icon name="mail"></ion-icon>
+          Email
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
+  <ion-fab right bottom>
+    <button ion-fab (click)="open()"><ion-icon name="add"></ion-icon></button>
+  </ion-fab>
 </ion-content>
