--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -8,5 +8,5 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>NxtLife Account</h3>
+  <button ion-button type="button" (click)="logout()" class="otpBtn">Logout</button>
 </ion-content>
