--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -7,13 +7,14 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="list-avatar-page">
   <ion-list>
     <ion-item-sliding *ngFor="let complaint of complaints" #slidingItem>
-      <ion-item>
+      <ion-item (click)="viewComplaint(complaint)">
         <h3><b>{{complaint.title}}</b></h3>
         <p>{{complaint.description}}</p>
-        <button ion-button clear item-right (click)="viewComplaint(complaint)">View</button>
+        <ion-note item-right>{{complaint.createdAt | amTimeAgo}}</ion-note>
+        <ion-note item-right>{{complaint.statusName}}</ion-note>
       </ion-item>
       <ion-item-options side="right">
         <button ion-button color="primary" (click)="showPrompt(slidingItem)">
