--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -10,16 +10,20 @@
 <ion-content class="list-avatar-page">
   <ion-list>
     <ion-item-sliding *ngFor="let complaint of complaints" #slidingItem>
-      <ion-item (click)="viewComplaint(complaint)">
+      <a ion-item detail-push detail-none href="#" (click)="viewComplaint(complaint)">
         <h3><b>{{complaint.title}}</b></h3>
         <p>{{complaint.description}}</p>
         <ion-note item-right>{{complaint.createdAt | amTimeAgo}}</ion-note>
         <ion-note item-right>{{complaint.statusName}}</ion-note>
-      </ion-item>
+      </a>
       <ion-item-options side="right">
         <button ion-button color="primary" (click)="showPrompt(slidingItem)">
           <ion-icon name="md-close"></ion-icon>
           Close
+        </button>
+        <button ion-button color="dark">
+          <ion-icon name="md-chatbubbles"></ion-icon>
+          Comments
         </button>
       </ion-item-options>
     </ion-item-sliding>
