Close complaint issue fixed

--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -17,7 +17,7 @@
         <ion-note item-right>{{complaint.statusName}}</ion-note>
       </a>
       <ion-item-options side="right">
-        <button ion-button color="secondary" (click)="showPrompt(slidingItem, complaint.id)">
+        <button ion-button color="secondary" (click)="showPrompt(slidingItem, complaint)">
           <ion-icon name="md-close"></ion-icon>
           Close
         </button>
