--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -28,6 +28,9 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data..."> </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
   <ion-fab right bottom>
     <button ion-fab (click)="open()"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
