--- a/src/pages/complaint/comment/comment.modal.html
+++ b/src/pages/complaint/comment/comment.modal.html
@@ -17,12 +17,12 @@
 </ion-content>
 
 <ion-footer keyboard-attach class="bar-stable">
-  <label class="item-input-wrapper">
-    <ion-input>
-        <input type="text" placeholder="Message..." />
-    </ion-input>
-  </label>
-  <div class="footer-button-wrap">
-    <button button-clear ion-button (click)="send(chatBox)">Send</button>
-  </div>
+  <form [formGroup]="ComplaintComment" (ngSubmit)="postComment()" novalidate>
+    <label class="item-input-wrapper">
+      <ion-input type="text" formControlName="comment" placeholder="write comment..." required></ion-input>
+    </label>
+    <div class="footer-button-wrap">
+      <button button-clear ion-button type="submit">Send</button>
+    </div>
+  </form>
 </ion-footer>
