--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -21,7 +21,7 @@
           <ion-icon name="md-close"></ion-icon>
           Close
         </button>
-        <button ion-button color="dark" (click)="openCommentModal(slidingItem)">
+        <button ion-button color="dark" (click)="openCommentModal(slidingItem, complaint)">
           <ion-icon name="ios-chatbubbles-outline"></ion-icon>
           Comments
         </button>
