Dashboard Icon changed

--- a/src/pages/homepage/homepage.html
+++ b/src/pages/homepage/homepage.html
@@ -18,13 +18,13 @@
       </ion-col>
       <ion-col width-33>
         <button ion-button color="dark" >
-          <label><ion-icon name="clipboard"></ion-icon></label>
+          <label><ion-icon name="analytics"></ion-icon></label>
           Survey
         </button>
       </ion-col>
       <ion-col width-33>
         <button ion-button color="dark" >
-          <label><ion-icon name="trending-up"></ion-icon></label>
+          <label><ion-icon name="stats"></ion-icon></label>
           Poll                    
         </button>
       </ion-col>
@@ -44,7 +44,7 @@
       </ion-col>
       <ion-col width-33>
         <button ion-button color="dark" >
-          <label><ion-icon name="paper"></ion-icon></label>
+          <label><ion-icon name="bug"></ion-icon></label>
           Report Issue                    
         </button>
       </ion-col>
