--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -28,6 +28,11 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+  <ion-list>
+    <ion-item *ngIf="EmptyComplaints">
+      <h3> NO COMPLAINTS </h3>
+    </ion-item>
+  </ion-list>
   <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data..."> </ion-infinite-scroll-content>
   </ion-infinite-scroll>
