--- a/src/pages/complaint/comment/comment.modal.html
+++ b/src/pages/complaint/comment/comment.modal.html
@@ -12,14 +12,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <ion-list inset>
-    <ion-item *ngFor="let c of comments" class="commentList">
-      <div class="from-me">
-        {{c.comment}}
-      </div>
-    </ion-item>
-  </ion-list>
+<ion-content id="chat" class="chat">
+  <div class="messages">
+    <div class="message" *ngFor="let m of comments" [ngClass]="{'me': m.parentId != null}">
+      {{ m.comment }}
+      <span class="date">{{ m.createdAt | amCalendar }}</span>
+    </div>
+  </div>
 </ion-content>
 
 <ion-footer keyboard-attach class="bar-stable">
