--- a/src/pages/homepage/homepage.html
+++ b/src/pages/homepage/homepage.html
@@ -18,13 +18,13 @@
       </ion-col>
       <ion-col width-33 >
         <button ion-button color="dark" (click)="openSurvey()">
-          <label><ion-icon name="analytics"></ion-icon></label>
+          <label><ion-icon name="ios-analytics-outline"></ion-icon></label>
           Survey
         </button>
       </ion-col>
       <ion-col width-33>
         <button ion-button color="dark" (click)="openPoll()">
-          <label><ion-icon name="stats"></ion-icon></label>
+          <label><ion-icon name="ios-stats-outline"></ion-icon></label>
           Poll                    
         </button>
       </ion-col>
@@ -32,19 +32,19 @@
     <ion-row>
       <ion-col width-33>
         <button ion-button color="dark" (click)="openComplaint()">
-          <label><ion-icon name="sad"></ion-icon></label>
+          <label><ion-icon name="ios-sad-outline"></ion-icon></label>
           Complaints                    
         </button>
       </ion-col>
       <ion-col width-33>
         <button ion-button color="dark" (click)="openAppreciation()">
-          <label><ion-icon name="thumbs-up"></ion-icon></label>
+          <label><ion-icon name="ios-thumbs-up-outline"></ion-icon></label>
           Appreciations                    
         </button>
       </ion-col>
       <ion-col width-33>
         <button ion-button color="dark" (click)="openReportIssue()">
-          <label><ion-icon name="bug"></ion-icon></label>
+          <label><ion-icon name="ios-bug-outline"></ion-icon></label>
           Report Issue                    
         </button>
       </ion-col>
