--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -16,18 +16,21 @@
 
 <ion-content class="list-avatar-page watermark">
   <ion-refresher (ionRefresh)="getComplaints($event)">
-    <ion-refresher-content pullingIcon="md-arrow-round-up"
-      pullingText="Pull to refresh"
-      refreshingSpinner="crescent"
-      refreshingText="Refreshing..."></ion-refresher-content>
+    <ion-refresher-content
+          pullingIcon="md-arrow-round-up"
+          pullingText="Pull to refresh"
+          refreshingSpinner="crescent"
+          refreshingText="Refreshing...">
+    </ion-refresher-content>
   </ion-refresher>
-  <ion-fab top right edge >
+  <ion-fab top right edge>
     <button ion-fab (click)="open()" color="fab"> <ion-icon name="add"></ion-icon></button>
   </ion-fab>
   <ion-list>
     <ion-item-sliding *ngFor="let complaint of complaints" #slidingItem >
       <a ion-item detail-push detail-none href="#" (click)="viewComplaint(complaint)">
-        <h2><b>{{complaint.againstCategoryName}}</b></h2>
+        <h2 *ngIf="!complaint.againstEmployeeName"><b>{{complaint.againstCategoryName}}</b></h2>
+        <h2 *ngIf="complaint.againstEmployeeName"><b>{{complaint.againstEmployeeName}}</b></h2>
         <h3>{{complaint.title}}</h3>
         <ion-note >
           <ion-row>
