Set char length for title and description

--- a/src/pages/complaint/new/newComplaintModal.html
+++ b/src/pages/complaint/new/newComplaintModal.html
@@ -47,11 +47,14 @@
         Complaint Details
       </ion-list-header>
       <ion-item>
-        <ion-input type="text" formControlName="title" placeholder="Complaint Title"></ion-input>
+        <ion-input type="text" formControlName="title" placeholder="Complaint Title (max.50)" maxlength="50"> </ion-input>
       </ion-item>
       <ion-item>
-        <ion-textarea rows="8" formControlName="description" placeholder="Complaint Description"></ion-textarea>
+        <ion-textarea rows="8" [(ngModel)]="description" formControlName="description" placeholder="Complaint Description" maxlength="200"></ion-textarea>
       </ion-item>
+      <div style="top: -18px;
+    position: relative;
+    text-align: right;">( {{200 - description.length}} )</div>
     </ion-list>
     <ion-list padding>
       <button ion-button block type="submit" [disabled]="newComplaint.invalid">Submit</button>
