Comments showing left side

--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -54,6 +54,8 @@
           <ion-icon name="ios-thumbs-down"></ion-icon>
           Reopen
         </button>
+      </ion-item-options>
+      <ion-item-options side="left">
         <button ion-button color="cool" (click)="openCommentModal(slidingItem, complaint)">
           <ion-icon name="ios-chatbubbles-outline"></ion-icon>
           Comments
