Complaint view done

--- a/src/pages/complaint/comment/comment.modal.html
+++ b/src/pages/complaint/comment/comment.modal.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons start>
       <button ion-button class="navBtnRight" (click)="dismiss()">
         <span color="primary" showWhen="ios">Cancel</span>
