--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -1,20 +1,15 @@
 <ion-header>
-  <ion-navbar >
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title >
       <span>Complaints</span>
     </ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only color="royal">
-        <ion-icon name="more"></ion-icon>
-      </button>
-    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content class="list-avatar-page watermark">
+<ion-content class="complaint-list watermark">
   <ion-refresher (ionRefresh)="getComplaints($event)">
     <ion-refresher-content pullingIcon="md-arrow-round-up"
       pullingText="Pull to refresh"
@@ -26,7 +21,7 @@
   </ion-fab>
   <ion-list>
     <ion-item-sliding *ngFor="let complaint of complaints" #slidingItem >
-      <a ion-item detail-push detail-none href="#" (click)="viewComplaint(complaint)">
+      <a ion-item detail-push detail-none href="#" (click)="viewComplaint(complaint)" [style.border-left-color]="complaint.statusColor">
         <h2><b>{{complaint.againstCategoryName}}</b></h2>
         <h3>{{complaint.title}}</h3>
         <ion-note >
