--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -1,12 +1,5 @@
 <ion-header>
-  <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title >
-      <span>Complaints</span>
-    </ion-title>
-  </ion-navbar>
+  <nl-navbar [title]="title"></nl-navbar>
 </ion-header>
 
 <ion-content class="complaint-list watermark">
