Create custom comment button

--- a/src/pages/complaint/comment/comment.modal.html
+++ b/src/pages/complaint/comment/comment.modal.html
@@ -7,7 +7,7 @@
       </button>
     </ion-buttons>
     <ion-title>
-      View Complaint
+      Comment
     </ion-title>
   </ion-toolbar>
 </ion-header>
