--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -14,7 +14,7 @@
       <a ion-item detail-push detail-none href="#" (click)="viewComplaint(complaint)" [style.border-left-color]="complaint.statusColor">
         <nl-list-view [complaint]="complaint"></nl-list-view>
       </a>
-      <ion-item-options side="right">
+      <!-- <ion-item-options side="right">
         <button ion-button color="secondary" (click)="showPrompt(slidingItem, complaint)" *ngIf="complaint.statusId != 6 && complaint.statusId != 4">
           <ion-icon name="md-close"></ion-icon>
           Close
@@ -27,13 +27,17 @@
           <ion-icon name="ios-thumbs-down"></ion-icon>
           Reopen
         </button>
+      </ion-item-options> -->
+      <ion-item-options side="right">
+        <nl-comment-button [master]="master" [complaint]="complaint"></nl-comment-button>
+        <!-- <nl-close-button [master]="master" [complaint]="complaint"></nl-close-button> -->
       </ion-item-options>
-      <ion-item-options side="left">
+      <!-- <ion-item-options side="left">
         <button ion-button color="cool" (click)="openCommentModal(slidingItem, complaint)">
           <ion-icon name="ios-chatbubbles-outline"></ion-icon>
           Comments
         </button>
-      </ion-item-options>
+      </ion-item-options> -->
     </ion-item-sliding>
   </ion-list>
   <ion-list>
