Create custom close button

--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -30,7 +30,7 @@
       </ion-item-options> -->
       <ion-item-options side="right">
         <nl-comment-button [master]="master" [complaint]="complaint"></nl-comment-button>
-        <!-- <nl-close-button [master]="master" [complaint]="complaint"></nl-close-button> -->
+        <nl-close-button [master]="master" [complaint]="complaint"></nl-close-button>
       </ion-item-options>
       <!-- <ion-item-options side="left">
         <button ion-button color="cool" (click)="openCommentModal(slidingItem, complaint)">
