Create custom satisfied button

--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -32,6 +32,7 @@
         <nl-comment-button [master]="master" [complaint]="complaint"></nl-comment-button>
         <nl-close-button [master]="master" [complaint]="complaint"></nl-close-button>
         <nl-reopen-button [master]="master" [complaint]="complaint"></nl-reopen-button>
+        <nl-satisfied-button [master]="master" [complaint]="complaint"></nl-satisfied-button>
       </ion-item-options>
       <!-- <ion-item-options side="left">
         <button ion-button color="cool" (click)="openCommentModal(slidingItem, complaint)">
