--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -3,11 +3,11 @@
 </ion-header>
 
 <ion-content class="complaint-list watermark">
-  <ion-refresher (ionRefresh)="getComplaints($event)">
+  <ion-refresher (ionRefresh)="loadNewComplaints($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-fab top right edge>
-    <button ion-fab (click)="open()" color="fab"> <ion-icon name="add"></ion-icon></button>
+    <button ion-fab (click)="newComplaint()" color="fab"> <ion-icon name="add"></ion-icon></button>
   </ion-fab>
   <ion-list>
     <ion-item-sliding *ngFor="let complaint of complaints" #slidingItem >
@@ -27,7 +27,7 @@
       <h3> NO COMPLAINTS </h3>
     </ion-item>
   </ion-list>
-  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+  <ion-infinite-scroll (ionInfinite)="loadMoreComplaints($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ion-content>
