New suggestion done

--- a/src/pages/suggestion/suggestion.html
+++ b/src/pages/suggestion/suggestion.html
@@ -7,7 +7,7 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-fab top right edge>
-    <button ion-fab (click)="newComplaint()" color="fab"> <ion-icon name="add"></ion-icon></button>
+    <button ion-fab (click)="newSuggestion()" color="fab"> <ion-icon name="add"></ion-icon></button>
   </ion-fab>
   <ion-list>
     <ion-item-sliding *ngFor="let suggestion of suggestions" #slidingItem >
